--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "author": "Austin Turner <paustint@gmail.com>",
   "license": "Common Public Attribution License Version 1.0 (CPAL)",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "@types/lodash": "^4.14.116",
     "antlr4ts": "0.4.1-alpha.0",
-    "lodash": "^4.17.10"
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
+    "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
@@ -29,7 +33,10 @@
     "antlr4ts-cli": "0.4.0-alpha.4",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
+    "ts-loader": "^4.5.0",
     "ts-node": "^7.0.1",
-    "typescript": "2.4.1"
+    "typescript": "^2.8.1",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
   }
 }
