--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "author": "Austin Turner <paustint@gmail.com>",
   "license": "Common Public Attribution License Version 1.0 (CPAL)",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "@types/lodash": "^4.14.116",
     "antlr4ts": "0.4.1-alpha.0",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10"
   },
   "devDependencies": {
